@@ -5634,7 +5634,7 @@ web
 	Oh what a tangled web we weave,
 	When first we practise to deceive!
 		[ Marmion, by Sir Walter Scott ]
-weeping angel
+weeping *angel
 	Lonely assassins they used to be called. No one quite knows
 	where they came from, but they're as old as the universe. Or
 	very nearly, and they have survived this long because they
