@@ -2211,12 +2211,13 @@ gazemu(mtmp, mattk)	/* monster gazes at you */
 			couldsee(mtmp->mx, mtmp->my) &&
 			mtmp->mcansee && !mtmp->mspec_used && rn2(5)) {
 		    int dmg = d(1,4);
-		    stop_occupation();
 		    if (!Reflecting) {
+			stop_occupation();
 			pline("%s reflection in your mind weakens you.", s_suffix(Monnam(mtmp)));
 	    		exercise(A_INT, TRUE);
 		    } else {
-			pline("%s tries to avoid looking at you.", Monnam(mtmp));
+			if (flags.verbose)
+			    pline("%s tries to avoid looking at you.", Monnam(mtmp));
 			dmg = 0;
 		    }
 		if (dmg) mdamageu(mtmp, dmg);
